--- a/index.html
+++ b/index.html
@@ -229,6 +229,9 @@
             <p>© 2024 LUSSO - Ropa Urbana</p>
         </div>
     </footer>
+    <script src="https://www.gstatic.com/firebasejs/9.1.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.1.0/firebase-database-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.1.0/firebase-storage-compat.js"></script>
 
     <script src="js/script.js"></script>
 </body>
