problema con el logo listo

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="header-content">
                 <div class="logo">
                     <a href="/">
-                        <img src="/images/logo lusso.jpg" alt="LUSSO LOGO" class="logo-img">
+                        <img src="images/logo lusso.jpg" alt="LUSSO LOGO" class="logo-img">
                     </a>
                 </div>
                 <button class="btn-admin" id="btnAdmin">
